--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,12 +1,13 @@
 <html>
 <head>
 	<title>Gulp Scaffold</title>
-	<link rel="stylesheet" type="text/css" href="./css/main.css">
+	<link rel="stylesheet" type="text/css" href="./css/main.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 </head>
 <body>
-<div class="container">
+<div class="jumbotron">
 	<h1>Example Text</h1>
 </div>
-<script src="js/main.min.js"></script>
+<script src="./js/main.min.js"></script>
 </body>
 </html>
